frontend-backend/be-deployment.yaml
---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: backend

spec:

  selector:

    matchLabels:

      app: hello

      tier: backend

      track: stable

  replicas: 3

  template:

    metadata:

      labels:

        app: hello

        tier: backend

        track: stable

    spec:

      containers:

        - name: hello

          image: "gcr.io/google-samples/hello-go-gke:1.0"

          ports:

            - name: http

              containerPort: 80

...
